@kvvaradha: Fixed users Last Visit Date with Time. https://github.com/FrontAccountingERP/FA/commit/23d959b73e39078850288b319e35936a5ea778ff http://frontaccounting.com/punbb/viewtopic.php?id=8004

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-02-19 Joe Hunt
+@kvvaradha: Fixed users Last Visit Date with Time.
+M	admin/users.php
+
 2019-02-13 Janusz Dobrowolski
 Process Depreciation: hardcoded fiscal years constraint removed.
 M	includes/data_checks.inc
