@braathwaate: Fixed newlines in memo displayed as html on purchase order modify https://github.com/FrontAccountingERP/FA/commit/84aa8ccb0b363e366733fe9b762c5c01660eb011

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-02-22 Joe Hunt
+@braathwaate: Fixed newlines in memo displayed as html on purchase order modify
+M	purchasing/includes/db/po_db.inc
+
 2019-02-19 Joe Hunt
 @kvvaradha: Fixed users Last Visit Date with Time.
 M	admin/users.php
