--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-02-22 Joe Hunt
+0004847: @braathwaate: FA allows reconciliation of closed transactions
+M	gl/bank_account_reconcile.php
+
+2019-02-22 Joe Hunt
 @braathwaate: Fixed newlines in memo displayed as html on purchase order modify
 M	purchasing/includes/db/po_db.inc
 
