0004859: @boxygen: Outstanding in Customer Balance with Journal Entry fixed. https://github.com/FrontAccountingERP/FA/commit/2c2164f6e17101e8bbfe029d272ea0d5266d6ec4 http://frontaccounting.com/punbb/viewtopic.php?id=8009

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-02-22 Joe Hunt
+0004859: @boxygen: Outstanding in Customer Balance with Journal Entry fixed.
+M	reporting/rep101.php
+
+2019-02-22 Joe Hunt
 0004847: @braathwaate: FA allows reconciliation of closed transactions
 M	gl/bank_account_reconcile.php
 
