--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-03-06 Joe Hunt
+@PaulShipley: PHP 7.X non-numeric value fix when using date format 5 (YYYY/MM/DD)
+M	includes/date_functions.inc
+
 2019-03-04 Joe Hunt
 @apmuthu: Clean up in en_US-demo.sql and en_US-new.sql
 M	sql/en_US-demo.sql
