@braathwaate: Supplier invoice quick entry edit enabled https://github.com/FrontAccountingERP/FA/commit/c001557f8ebee630494c6323477bd865a61942d9 http://frontaccounting.com/punbb/viewtopic.php?id=7306

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,6 @@
+2019-03-19 Joe Hunt
+@braathwaate: Supplier invoice quick entry edit enabled
+
 2019-03-06 Joe Hunt
 @PaulShipley: PHP 7.X non-numeric value fix when using date format 5 (YYYY/MM/DD)
 M	includes/date_functions.inc
