@notrinos: Removed broken CCA in exchange rate providers list, updated url from google api. https://github.com/FrontAccountingERP/FA/commit/f4161d2985268fc4333f968b215ed0c6a53b731c#commitcomment-32876991 http://frontaccounting.com/punbb/viewtopic.php?pid=34507#p34507 Make appropriate config.php changes as needed to the exchange rate provider index

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,5 +1,12 @@
+2019-03-21 Joe Hunt
+@notrinos: Removed broken CCA in exchange rate providers list, updated url from google api.
+M	config.default.php
+M	gl/includes/db/gl_db_rates.inc
+
 2019-03-19 Joe Hunt
 @braathwaate: Supplier invoice quick entry edit enabled
+M	purchasing/includes/ui/invoice_ui.inc
+M	purchasing/supplier_invoice.php
 
 2019-03-06 Joe Hunt
 @PaulShipley: PHP 7.X non-numeric value fix when using date format 5 (YYYY/MM/DD)
