Presentation bug in Sales Order View when reference is 'auto'. https://github.com/FrontAccountingERP/FA/commit/2aea99756a8c19766f0f9dfee56b27f7c1994f37 http://frontaccounting.com/punbb/viewtopic.php?id=8056

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-03-23 Joe Hunt
+Presentation bug in Sales Order View when reference is 'auto'.
+M	sales/view/view_sales_order.php
+
 2019-03-21 Joe Hunt
 @notrinos: Removed broken CCA in exchange rate providers list, updated url from google api.
 M	config.default.php
