@JimmyC: Sales Invoice/Delivery when Cash Sales and document date before now. Due date should be the same. With Rerun. https://github.com/FrontAccountingERP/FA/commit/2bb32c39a0dc02afea9a67053d03d4b148114d5d https://github.com/FrontAccountingERP/FA/commit/b8ca787d4997e98d29af963f9e23534796381c44 http://frontaccounting.com/punbb/viewtopic.php?pid=34529#p34529

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-03-24 Joe Hunt
+@JimmyC: Sales Invoice/Delivery when Cash Sales and document date before now. Due date should be the same.
+M	sales/sales_order_entry.php
+
 2019-03-23 Joe Hunt
 Presentation bug in Sales Order View when reference is 'auto'.
 M	sales/view/view_sales_order.php
