--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-03-26 Joe Hunt
+@JimmyC/@joe: Empty gl transaction on Zero amount tax details was zero when net amount present - fixed.
+M	sales/includes/db/sales_invoice_db.inc
+
 2019-03-24 Joe Hunt
 @JimmyC: Sales Invoice/Delivery when Cash Sales and document date before now. Due date should be the same.
 M	sales/sales_order_entry.php
