--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-03-28 Joe Hunt
+Upstream cleanup of whitespace in 2019-01-17 commit
+M	js/behaviour.js
+
 2019-03-26 Joe Hunt
 @JimmyC/@joe: Empty gl transaction on Zero amount tax details was zero when net amount present - fixed.
 M	sales/includes/db/sales_invoice_db.inc
