@braathwaate: 4869 - Work order listing / reports fixed to omit voided orders and re-run. https://github.com/FrontAccountingERP/FA/commit/3bd9d76da0a8c8f014f83fc5203b9954b66737ab https://github.com/FrontAccountingERP/FA/commit/c82cbc67f22454e4afd30e53c40043b54a732be3

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
-2019-03-28 Joe Hunt
+2019-03-26 Joe Hunt
+@braathwaate: 4869 - Work order listing / reports fixed to omit voided orders and re-run.
+M	manufacturing/includes/db/work_orders_db.inc
+M	reporting/includes/reports_classes.inc
+M	reporting/rep402.php
+
+2019-03-26 Joe Hunt
 Upstream cleanup of whitespace in 2019-01-17 commit
 M	js/behaviour.js
 
