4867: supplier quick entry g/l account list should show the bank accounts in the line. https://github.com/FrontAccountingERP/FA/commit/3713324329f0ec2effe45febe79cb659ae13d5f6

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-03-26 Joe Hunt
+4867: supplier quick entry g/l account list should show the bank accounts in the line.
+M	purchasing/includes/ui/invoice_ui.inc
+
+2019-03-26 Joe Hunt
 @braathwaate: 4869 - Work order listing / reports fixed to omit voided orders and re-run.
 M	manufacturing/includes/db/work_orders_db.inc
 M	reporting/includes/reports_classes.inc
