@braathwaate: Recurrent Invoices in 2.4 is not sending. https://github.com/FrontAccountingERP/FA/commit/4a4bc22aa76fd989f2c005102bd3da8e0327e547 http://frontaccounting.com/punbb/viewtopic.php?id=8025

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-04-07 Joe Hunt
+@braathwaate: Recurrent Invoices in 2.4 is not sending.
+M	sales/create_recurrent_invoices.php
+
 2019-03-26 Joe Hunt
 @braathwaate/@joe: 4863 - Dimension not defaulted on PO entry / modify - Fixed.
 M	purchasing/includes/db/grn_db.inc
