--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-04-13 Joe Hunt
+@braathwaate and @kvvaradha: Rerun of sales_order_ui.inc 2019-01-24/25 - fixed bug
+M	sales/includes/ui/sales_order_ui.inc
+
 2019-04-07 Joe Hunt
 @braathwaate: Recurrent Invoices in 2.4 is not sending.
 M	sales/create_recurrent_invoices.php
