--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-04-14 Joe Hunt
+@kvvaradha: user_list_cells Real name shows empty when not entered in user table and re-run.
+M	includes/ui/ui_lists.inc
+
 2019-04-13 Joe Hunt
 @braathwaate and @kvvaradha: Rerun of sales_order_ui.inc 2019-01-24/25 - fixed bug
 M	sales/includes/ui/sales_order_ui.inc
