@kvvaradha: Rerun of sales_order_ui.inc 2019-04-13 https://github.com/FrontAccountingERP/FA/commit/aa7236959b6b689fda33663ea5c76a82768c745f http://frontaccounting.com/punbb/viewtopic.php?pid=34779#p34779

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-04-22 Joe Hunt
+@kvvaradha: Rerun of sales_order_ui.inc 2019-04-13
+M	sales/includes/ui/sales_order_ui.inc
+
 2019-04-14 Joe Hunt
 @kvvaradha: user_list_cells Real name shows empty when not entered in user table and re-run.
 M	includes/ui/ui_lists.inc
