Fixed Email Receipt to customer. https://github.com/FrontAccountingERP/FA/commit/389cac488ce0809645650187f0e11258d4f519e2 http://frontaccounting.com/punbb/viewtopic.php?id=4299 https://sourceforge.net/p/frontaccounting/git/merge-requests/1/

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2019-05-01 Joe Hunt
+Fixed Email Receipt to customer.
+M	reporting/includes/reporting.inc
+M	reporting/rep112.php
+M	reporting/reports_main.php
+M	sales/customer_payments.php
+
 2019-04-22 Joe Hunt
 @kvvaradha: Rerun of sales_order_ui.inc 2019-04-13
 M	sales/includes/ui/sales_order_ui.inc
