--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-05-18 Joe Hunt
+@boxygen:  Customer and Supplier Trial Balance Report and margin and no_zeroes fixes.
+M	reporting/rep115.php
+M	reporting/rep206.php
+
 2019-05-01 Joe Hunt
 Fixed Email Receipt to customer.
 M	reporting/includes/reporting.inc
