@JimmyC: Wrong Presentation of supp balance in forms. https://github.com/FrontAccountingERP/FA/commit/192c58cc217a8cd8950c3fe983884a9d72f5746d http://frontaccounting.com/punbb/viewtopic.php?pid=35087#p35087

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-06-02 Joe Hunt
+@JimmyC: Wrong Presentation of supp balance in forms.
+M	purchasing/includes/db/invoice_db.inc
+M	purchasing/includes/db/po_db.inc
+
 2019-05-18 Joe Hunt
 @boxygen:  Customer and Supplier Trial Balance Report and margin and no_zeroes fixes.
 M	reporting/rep115.php
