--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-06-04 Joe Hunt
+@poncho1234: Fixed Supplier Allocation Inquiry - Due Date.
+M	purchasing/inquiry/supplier_allocation_inquiry.php
+
 2019-06-02 Joe Hunt
 @JimmyC: Wrong Presentation of supp balance in forms.
 M	purchasing/includes/db/invoice_db.inc
