@boxygen: Bug 4896: Standard Cost not Updated in debtor_trans_detail table if Customer Credit Note is processed. https://github.com/FrontAccountingERP/FA/commit/af67579e02816d14a4cd428cb8ea191a6fa66aa7 http://mantis.frontaccounting.com/view.php?id=4896

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-06-04 Joe Hunt
+@boxygen: Bug 4896: Standard Cost not Updated in debtor_trans_detail table if Customer Credit Note is processed.
+M	sales/includes/db/sales_credit_db.inc
+
+2019-06-04 Joe Hunt
 @poncho1234: Fixed Supplier Allocation Inquiry - Due Date.
 M	purchasing/inquiry/supplier_allocation_inquiry.php
 
