--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-06-15 Janusz Dobrowolski
+Removed invalid update of stock_move costs on cost update.
+M	inventory/includes/db/items_trans_db.inc
+
 2019-06-04 Joe Hunt
 @boxygen: Bug 4896: Standard Cost not Updated in debtor_trans_detail table if Customer Credit Note is processed.
 M	sales/includes/db/sales_credit_db.inc
