@braathwaate: General Ledger List of journal entries - empty memo fields fix. https://github.com/FrontAccountingERP/FA/commit/80d1443a47dee4843b49acfd1983b07f9c40db17 http://frontaccounting.com/punbb/viewtopic.php?id=8221

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-06-16 Joe Hunt
+@braathwaate: General Ledger List of journal entries - empty memo fields fix.
+M	reporting/rep702.php
+
+2019-06-16 Joe Hunt
 @boxygen: Fixing Get_domestic_price in rep301 and rep308.
 M	reporting/rep301.php
 M	reporting/rep308.php
