@boxygen: Fixing Get_domestic_price in rep301 and rep308. https://github.com/FrontAccountingERP/FA/commit/936e862fe67af1b6113aee0d727eb86e7f021cc1 http://frontaccounting.com/punbb/viewtopic.php?id=8184

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-06-16 Joe Hunt
+@boxygen: Fixing Get_domestic_price in rep301 and rep308.
+M	reporting/rep301.php
+M	reporting/rep308.php
+
 2019-06-15 Janusz Dobrowolski
 Removed invalid update of stock_move costs on cost update.
 M	inventory/includes/db/items_trans_db.inc
