--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2019-06-17 Joe Hunt
+@boxygen: Cost Update anomaly in Inventory Sales Report fixed and rerun
+M	inventory/includes/db/items_adjust_db.inc
+M	reporting/rep301.php
+M	reporting/rep308.php
+
 2019-06-16 Joe Hunt
 @braathwaate: General Ledger List of journal entries - empty memo fields fix.
 M	reporting/rep702.php
