Fixed Inventory Purchasing Report with physical rate from line and rerun https://github.com/FrontAccountingERP/FA/commit/a99cb262f8c9e65ab86c231c997cca422e836817 https://github.com/FrontAccountingERP/FA/commit/4158930d4c9563173ff14f5586df4574e40516f5

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-06-20 Joe Hunt
+Fixed Inventory Purchasing Report with physical rate from line and rerun
+M	reporting/rep306.php
+
 2019-06-17 Joe Hunt
 Whitespace synch with upstream for previous commit
 M	inventory/includes/db/items_adjust_db.inc
