--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2019-06-23 Janusz Dobrowolski
+Moved inventory adjustment changes for database consistency to FAMods24
+M	inventory/includes/db/items_adjust_db.inc
+M	reporting/rep301.php
+M	reporting/rep308.php
+
 2019-06-20 Joe Hunt
 Fixed Inventory Purchasing Report with physical rate from line and rerun
 M	reporting/rep306.php
