Fixed inventory cost calculation for fiscal year deletion. https://github.com/FrontAccountingERP/FA/commit/7a03a26720d0bbe802f1fa063b496f999d59a876

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,5 +1,9 @@
+2019-06-24 Janusz Dobrowolski
+Fixed inventory cost calculation for fiscal year deletion.
+M	admin/db/fiscalyears_db.inc
+
 2019-06-23 Janusz Dobrowolski
-Moved inventory adjustment changes for database consistency to FAMods24
+Reverted inventory adjustment changes for database consistency and moved to FAMods24
 M	inventory/includes/db/items_adjust_db.inc
 M	reporting/rep301.php
 M	reporting/rep308.php
