Inventory Adjustment: Fixed entry error when inventory notifications enabled. https://github.com/FrontAccountingERP/FA/commit/f5b7842870b13bc956b7b9613aa4f937407fc0b1

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-06-27 Janusz Dobrowolski
+Inventory Adjustment: Fixed entry error when inventory notifications enabled.
+M	inventory/includes/db/items_adjust_db.inc
+
 2019-06-25 Joe Hunt
 FA 2.4.7
 M	lang/new_language_template/LC_MESSAGES/empty.po
