Credit Note Modification: fixed check whether transaction is editable. https://github.com/FrontAccountingERP/FA/commit/f2317e94238fb0ae47bffbfa55f564128e073138

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-07-07 Janusz Dobrowolski
+Credit Note Modification: fixed check whether transaction is editable.
+M	purchasing/supplier_credit.php
+
+2019-07-07 Janusz Dobrowolski
 Strict SQL related error when background journal transaction was saved. Fixed.
 M	includes/db/gl_journal.inc
 
