Limit editable stock items list in Sales Order, Credit Notes to 50 chars and re-run. https://github.com/FrontAccountingERP/FA/commit/de366f0cb00cba0860b18a26a6d1bc01f5ee6251 https://github.com/FrontAccountingERP/FA/commit/9a101a373c2b0575d65c481724d857298ec06fe9

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2019-07-18 Joe Hunt
+Limit editable stock items list in Sales Order, Credit Notes to 50 chars and re-run.
+M	includes/ui/ui_lists.inc
+M	sales/includes/ui/sales_order_ui.inc
+
+2019-07-18 Joe Hunt
 Inventory Item Movements: Purchase Order Delivery and Credit Note has trans_no in reference column or Return memo presented instead of reference. Fixed.
 M	inventory/includes/inventory_db.inc
 
