Paged transaction inquiries optimized for maximum links in Sales and Purchasing and continuation https://github.com/FrontAccountingERP/FA/commit/97c5e11dd178b2b10edd2b99276b3347470fafc8 https://github.com/FrontAccountingERP/FA/commit/3a4c0d65011d8577d7c300e7492a17bf5250c827 004950: Next commit was included in earlier commit. https://github.com/FrontAccountingERP/FA/commit/27610a5a7a22cafffa960dbfd795f33f33c78dc2 https://github.com/FrontAccountingERP/FA/commit/da47a48098bb4426c9b9a13e6c3ed2e37abb1659

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,16 @@
 2019-07-18 Joe Hunt
+Paged transaction inquiries optimized for maximum links in Sales and Purchasing and continuation
+M	dimensions/inquiry/search_dimensions.php
+M	manufacturing/search_work_orders.php
+M	purchasing/includes/db/po_db.inc
+M	purchasing/inquiry/po_search.php
+M	purchasing/inquiry/po_search_completed.php
+M	purchasing/inquiry/supplier_inquiry.php
+M	reporting/includes/reporting.inc 
+M	sales/inquiry/customer_inquiry.php
+M	sales/inquiry/sales_orders_view.php 
+
+2019-07-18 Joe Hunt
 Limit editable stock items list in Sales Order, Credit Notes to 50 chars and re-run.
 M	includes/ui/ui_lists.inc
 M	sales/includes/ui/sales_order_ui.inc
