--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-07-24 Joe Hunt
+Journal Inquiry Dates to be from User Preference Transaction Days.
+M	gl/inquiry/journal_inquiry.php
+
 2019-07-18 Joe Hunt
 Paged transaction inquiries optimized for maximum links in Sales and Purchasing and continuation
 M	dimensions/inquiry/search_dimensions.php
