Allocate Customer Payments or Credit Notes: fully allocated payments with discount were still displayed even with settled option off, fixed. https://github.com/FrontAccountingERP/FA/commit/36a48e114ff54339f3696f8d64024e9636762e90

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-07-30 Janusz Dobrowolski
+Allocate Customer Payments or Credit Notes: fully allocated payments with discount were still displayed even with settled option off, fixed.
+M	sales/includes/db/custalloc_db.inc
+
 2019-07-24 Joe Hunt
 Journal Inquiry Dates to be from User Preference Transaction Days.
 M	gl/inquiry/journal_inquiry.php
