--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-08-02/05 Joe Hunt
+Show more relevant info in CounterPart Field, Journal Inquiry and re-run
+M	gl/includes/db/gl_db_trans.inc
+M	gl/inquiry/journal_inquiry.php
+
 2019-07-30 Janusz Dobrowolski
 Allocate Customer Payments or Credit Notes: fully allocated payments with discount were still displayed even with settled option off, fixed.
 M	sales/includes/db/custalloc_db.inc
