--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,5 +1,5 @@
 2019-08-02/05 Joe Hunt
-Show more relevant info in CounterPart Field, Journal Inquiry and re-run
+Show more relevant info in CounterPart Field, Journal Inquiry and re-run, tab => 4 spaces
 M	gl/includes/db/gl_db_trans.inc
 M	gl/inquiry/journal_inquiry.php
 
