Report Sales Listing by Salesman fix https://github.com/FrontAccountingERP/FA/commit/bb2691a9b508aaf3f75b38ca4768f6bc949c7cd5 http://frontaccounting.com/punbb/viewtopic.php?id=8335

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-08-17 Joe Hunt
+Report Sales Listing by Salesman fix
+M	reporting/rep106.php
+
+2019-08-17 Joe Hunt
 Bug 4987: In RTL languages, text aligned centered is printed aligned right in PDF documents. Fixed.
 M	reporting/includes/class.pdf.inc
 
