--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-08-17 Joe Hunt
+Clone Manufactured Item -> Clone BOM.
+M	manufacturing/manage/bom_edit.php
+
+2019-08-17 Joe Hunt
 Report Sales Listing by Salesman fix
 M	reporting/rep106.php
 
