DB error message in sales_order_db.inc fixed. https://github.com/FrontAccountingERP/FA/commit/7b7c02358e74f6daef37b220f713380e2725006f http://frontaccounting.com/punbb/viewtopic.php?id=8366

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-08-28 Joe Hunt
+Database error message in sales_order_db.inc fixed.
+M	sales/includes/db/sales_order_db.inc
+
 2019-08-17 Joe Hunt
 Clone Manufactured Item -> Clone BOM.
 M	manufacturing/manage/bom_edit.php
