Whitespace changes synched with upstream https://github.com/FrontAccountingERP/FA/commit/69400c429d9595d3d554a86730cd5b0905afb542

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,6 +1,10 @@
+2019-09-03 Joe Hunt
+Whitespace changes synched with upstream
+M	inventory/includes/stock_transfers_ui.inc
+
 2019-09-03 notrinos
 Inventory location transfer from sales kit fixed.
-M	 inventory/includes/stock_transfers_ui.inc
+M	inventory/includes/stock_transfers_ui.inc
 
 2019-08-28 Joe Hunt
 Database error message in sales_order_db.inc fixed.
