Additional Transaction Date presence check https://github.com/FrontAccountingERP/FA/commit/5bcc7a4ccbb360794669a098b48d8eb3dcf77119 http://frontaccounting.com/punbb/viewtopic.php?id=8433

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-10-04 Joe Hunt
+Additional Transaction Date presence check
+M	admin/db/transactions_db.inc
+
 2019-09-03 Joe Hunt
 Whitespace changes synched with upstream
 M	inventory/includes/stock_transfers_ui.inc
