--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-10-04 Joe Hunt
+Further count() => count_array() fixes
+M	reporting/includes/pdf_report.inc
+
+2019-10-04 Joe Hunt
 Additional Transaction Date presence check
 M	admin/db/transactions_db.inc
 
