Added Customer / Supplier Attachments feature https://github.com/FrontAccountingERP/FA/commit/3d95c6844745f183ebab970251cd254dd6cbdcec https://github.com/FrontAccountingERP/FA/commit/15576cedd9e46caac2884c2815875e7ec9fd4802 http://frontaccounting.com/punbb/viewtopic.php?id=8304 http://frontaccounting.com/punbb/viewtopic.php?pid=36229#p36229

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,15 @@
-2019-10-04 Joe Hunt
+2019-10-10 Janusz Dobrowolski
+Added Customer / Supplier Attachments feature
+A	includes/ui/attachment.inc
+M	admin/attachments.php
+M	admin/db/attachments_db.inc
+M	admin/db/transactions_db.inc
+M	includes/sysnames.inc
+M	includes/types.inc
+M	purchasing/manage/suppliers.php
+M	sales/manage/customers.php
+
+2019-10-06 Joe Hunt
 Further count() => count_array() fixes
 M	reporting/includes/pdf_report.inc
 
