Additional fixes for Cust / Supp Attachments to allow for Add Suppliers https://github.com/FrontAccountingERP/FA/commit/039e2f9b14460f2c1fd0c3cbe2b39983b1b7e93b http://frontaccounting.com/punbb/viewtopic.php?pid=36237#p36237

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2019-10-11 Janusz Dobrowolski
+Additional fixes for Cust / Supp Attachments to allow for Add Suppliers
+M	admin/attachments.php
+M	purchasing/manage/suppliers.php
+
 2019-10-10 Janusz Dobrowolski
 Added Customer / Supplier Attachments feature
 A	includes/ui/attachment.inc
