Voided documents still exist in drop-down when printing. Fixed. https://github.com/FrontAccountingERP/FA/commit/8e393ccdb96b3d59f4afe138e2dd5325230b48d9 http://frontaccounting.com/punbb/viewtopic.php?id=8451

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-10-14 Joe Hunt
+Voided documents still exist in drop-down when printing. Fixed.
+M	reporting/includes/reports_classes.inc
+
 2019-10-11 Janusz Dobrowolski
 Additional fixes for Cust / Supp Attachments to allow for Add Suppliers
 M	admin/attachments.php
