--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,8 +1,12 @@
+2019-10-28 Joe Hunt
+Bug 5009: Page # on invoices counts up across invoices. Fixed for all documents.
+M	reporting/includes/pdf_report.inc
+
 2019-10-26 Joe Hunt
 Misspelled parameter in rep115.php
 M	reporting/rep115.php
 
-2019-10-21 Joe Hunt
+2019-10-22 Joe Hunt
 Bug 5013: zero invoices create zero payments and cause db error upon view payment. Fixed.
 M	sales/includes/db/sales_invoice_db.inc
 
