count error when printing to Excel. Fixed. https://github.com/FrontAccountingERP/FA/commit/1ea4eba5d15555990a7f0c79c5199b39b48ea79e http://frontaccounting.com/punbb/viewtopic.php?id=8463

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2019-11-10 Joe Hunt
+count error when printing to Excel. Fixed.
+M	reporting/includes/Workbook.php
+M	reporting/includes/excel_report.inc
+M	reporting/includes/pdf_report.inc
+
 2019-10-28 Joe Hunt
 Bug 5009: Page # on invoices counts up across invoices. Fixed for all documents.
 M	reporting/includes/pdf_report.inc
