--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-11-10 Joe Hunt
+Whitespace synched with upstream
+M	sales/create_recurrent_invoices.php
+
+2019-11-10 Joe Hunt
 count error when printing to Excel. Fixed.
 M	reporting/includes/Workbook.php
 M	reporting/includes/excel_report.inc
