@bobloblian: recurring invoices - period improved. https://github.com/FrontAccountingERP/FA/commit/fcf60152ed8fe3373f9dfe54ca5604e7446f995d http://frontaccounting.com/punbb/viewtopic.php?id=6677

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2019-11-10 Joe Hunt
+recurring invoices - period improved.
+M	sales/create_recurrent_invoices.php
+
+2019-11-10 Joe Hunt
 Whitespace synched with upstream
 M	sales/create_recurrent_invoices.php
 
