--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-11-25 Joe Hunt
+@brucek: Formatting error in dashboard.inc fixed.
+M	includes/dashboard.inc
+
 2019-11-10 Joe Hunt
 recurring invoices - period improved.
 M	sales/create_recurrent_invoices.php
