Bug 4988: Auto Increase of Document References cant be disabled. Fixed. https://github.com/FrontAccountingERP/FA/commit/c5e3e1a1d98fb715cd52e4e943ba39b5e3d58765 http://frontaccounting.com/punbb/viewtopic.php?pid=36492#p36492

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-11-26 Joe Hunt
+Bug 4988: Auto Increase of Document References cant be disabled. Fixed.
+M	sales/includes/cart_class.inc
+
 2019-11-25 Janusz Dobrowolski
 Bug 4993: Sales Order - incorrect prepayment guess for wholesale (non tax included) pricelists.
 M	sales/includes/cart_class.inc
