--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-11-26 Janusz Dobrowolski
+Bug 5002: Journal Inquiry - incorrect amounts displayed for journal entries with more than one customer/supplier accounts, fixed.
+M	gl/includes/db/gl_db_trans.inc
+
 2019-11-26 Joe Hunt
 Bug 4988: Auto Increase of Document References cant be disabled. Fixed.
 M	sales/includes/cart_class.inc
