--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2019-12-26 Joe Hunt
+Customer Payment Entry scrolling behaviour on All or None fixed.
+M	includes/ui/allocation_cart.inc
+
 2019-11-26 Janusz Dobrowolski
 Bug 5002: Journal Inquiry - incorrect amounts displayed for journal entries with more than one customer/supplier accounts, fixed.
 M	gl/includes/db/gl_db_trans.inc
