Bank statement report with All Bank Accounts option added, rerun https://github.com/FrontAccountingERP/FA/commit/71e2a022f298a96a2406de1fc8397270257f9a1f https://github.com/FrontAccountingERP/FA/commit/1f284ec5fb3bb7c1388fd0559e996d85be3741c0 https://frontaccounting.com/punbb/viewtopic.php?id=8599 https://frontaccounting.com/punbb/viewtopic.php?id=8617

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2020-01-01 Joe Hunt
+Bank statement report with All Bank Accounts option added, rerun
+M	reporting/includes/reports_classes.inc
+M	reporting/rep601.php
+M	reporting/reports_main.php
+
 2019-12-26 Joe Hunt
 Customer Payment Entry scrolling behaviour on All or None fixed.
 M	includes/ui/allocation_cart.inc
