Sales Order Inquiry Sort Descending. Fixed. https://github.com/FrontAccountingERP/FA/commit/f393f0b6e6dbd73b8371cc0ebf2d858b05592d30 https://frontaccounting.com/punbb/viewtopic.php?id=8637

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2020-01-13 Joe Hunt
+Sales Order Inquiry Sort Descending. Fixed.
+M	sales/includes/db/sales_order_db.inc
+M	sales/inquiry/sales_orders_view.php
+
 2020-01-01 Joe Hunt
 Bank statement report with All Bank Accounts option added, rerun
 M	reporting/includes/reports_classes.inc
